@@ -1,4 +1,26 @@
-FROM openjdk:17
+FROM eclipse-temurin:17-jdk-alpine AS jre-builder
+
+# Install binutils, required by jlink
+RUN apk update &&  \
+    apk add binutils
+
+# Build small JRE image
+RUN $JAVA_HOME/bin/jlink \
+         --verbose \
+         --add-modules ALL-MODULE-PATH \
+         --strip-debug \
+         --no-man-pages \
+         --no-header-files \
+         --compress=2 \
+         --output /optimized-jdk-17
+
+# Second stage, Use the custom JRE and build the app image
+FROM alpine:latest
+ENV JAVA_HOME=/opt/jdk/jdk-17
+ENV PATH="${JAVA_HOME}/bin:${PATH}"
+
+# copy JRE from the base image
+COPY --from=jre-builder /optimized-jdk-17 $JAVA_HOME
 
 WORKDIR /app
 
@@ -11,6 +33,6 @@ ENV PORT=$PORT
 RUN ./mvnw clean package
 RUN cp target/*.jar ./program
 
-EXPOSE $PORT
+EXPOSE 8080
 
 CMD [ "java", "-jar", "./program" ]
